--- a/sugarcoat/api/templates/base.html
+++ b/sugarcoat/api/templates/base.html
@@ -7,6 +7,7 @@
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/npm.js') }}"></script>
     <script src="{{ url_for('static', filename='display_objects.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='sugarcoat.css') }}">
     <meta charset="UTF-8">
     <title>Homepage</title>
 
