--- a/sugarcoat/api/templates/json_template.html
+++ b/sugarcoat/api/templates/json_template.html
@@ -45,7 +45,7 @@
 
     <dl class="dl-horizontal">
         <dt>URL</dt>
-        <dd>{{ request.url }}</dd>
+        <dd>{{ json_result.url }}</dd>
         <dt>Response Code</dt>
         <dd class="{{ header_class }}">{{ json_result.status_code }}</dd>
         <dt>Response Time</dt>
