Updating flask and adding 404

--- a/sugarcoat/api/templates/region.html
+++ b/sugarcoat/api/templates/region.html
@@ -34,7 +34,7 @@
         <h2>Rackspace Services</h2>
         <h3>Servers</h3>
         <table class="table-striped table">
-        <thead><tr><th>Service Name</th><th>{{ region }}</th></tr></thead>
+        <thead><tr><th>Service Name</th><th>URL</th></tr></thead>
         <tbody>
 
         {% for role in g.user_info.service_catalog_list %}
@@ -68,7 +68,7 @@
         </table>
         <h3>Configuration</h3>
         <table class="table-striped table">
-            <thead><tr><th>Service Name</th><th>{{ region }}</th></tr></thead>
+            <thead><tr><th>Service Name</th><th>URL</th></tr></thead>
             <tbody>
 
             {% for role in g.user_info.service_catalog_list %}
@@ -102,7 +102,7 @@
         </table>
         <h3>Data Services</h3>
         <table class="table-striped table">
-            <thead><tr><th>Service Name</th><th>{{ region }}</th></tr></thead>
+            <thead><tr><th>Service Name</th><th>URL</th></tr></thead>
             <tbody>
 
             {% for role in g.user_info.service_catalog_list %}
@@ -136,7 +136,7 @@
         </table>
         <h3>Reliability Services</h3>
         <table class="table-striped table">
-            <thead><tr><th>Service Name</th><th>{{ region }}</th></tr></thead>
+            <thead><tr><th>Service Name</th><th>URL</th></tr></thead>
             <tbody>
 
             {% for role in g.user_info.service_catalog_list %}
@@ -170,7 +170,7 @@
         </table>
         <h3>Platform Services</h3>
         <table class="table-striped table">
-            <thead><tr><th>Service Name</th><th>{{ region }}</th></tr></thead>
+            <thead><tr><th>Service Name</th><th>URL</th></tr></thead>
             <tbody>
 
             {% for role in g.user_info.service_catalog_list %}
