--- a/sugarcoat/rackspacecloud/blueprint/templates/login.html
+++ b/sugarcoat/rackspacecloud/blueprint/templates/login.html
@@ -10,8 +10,8 @@
                     <li class="active"><a href="{{ url_for('rackspacecloud.auth_token_view') }}">View Token</a></li>
                 {% else %}
                     <li class="active"><a href="{{ url_for('rackspacecloud.login_view') }}">Log In</a></li>
-                    <li class="active"><a href="http://docs.rackspace.com/">Rackspace Documenation</a></li>
-                    <li class="active"><a href="http://docs.rackspace.com/auth/api/v2.0/auth-client-devguide/content/API_Operations.html">Rackspace Authentication Documenation</a></li>
+                    <li class="active"><a href="http://docs.rackspace.com/"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>API Docs</a></li>
+                    <li class="active"><a href="http://docs.rackspace.com/auth/api/v2.0/auth-client-devguide/content/API_Operations.html"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>API Auth Docs</a></li>
 
                 {% endif %}
 
