--- a/sugarcoat/api/templates/index.html
+++ b/sugarcoat/api/templates/index.html
@@ -16,7 +16,7 @@
         <tbody>
             <tr>
                 <td>
-                    <a href="{{ url_for('rackspacecloud.rackspace_index') }}">Rackspace</a>
+                    <a href="{{ url_for('rackspacecloud.index') }}">Rackspace</a>
                 </td>
                 <td>
                     <a href="http://docs.rackspace.com"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>Rackspace API Doc</a>
