--- a/sugarcoat/api/templates/json_template.html
+++ b/sugarcoat/api/templates/json_template.html
@@ -36,7 +36,7 @@
             <button class="btn {% if json_result.response_body  %}btn-primary{% else %}btn-disabled{% endif %} navbar-btn" type="button" data-toggle="collapse" data-target="#response_body">Response Body</button>
             <button class="btn btn-primary navbar-btn" type="button" data-toggle="collapse" data-target="#additional_urls">Additional URLs</button>
             <ol class="breadcrumb navbar-right">
-                <li><a href="{{ url_for('rackspacecloud.rackspace_index') }}">Home</a></li>
+                <li><a href="{{ url_for('rackspacecloud.index') }}">Home</a></li>
                 <li>{{ g.list_obj.catalog_key }}</li>
                 <li class="active"><a href="{{ url_for('rackspacecloud.service_catalog_list', servicename=g.list_obj.catalog_key, region=region) }}">{{ region }}</a></li>
             </ol>
